--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -26,3 +26,5 @@ $colorText: #041a3b !default;
 $colorTextSecondary: #707482 !default;
 
 $colorAccessibilityOutline: #9648bd !default;
+
+$sliderThumbShadowColor: rgba(53, 61, 73, 0.5);
