--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -27,4 +27,4 @@ $colorTextSecondary: #707482 !default;
 
 $colorAccessibilityOutline: #9648bd !default;
 
-$sliderThumbShadowColor: rgba(53, 61, 73, 0.5);
+$colorShadow: rgba(53, 61, 73, 0.2) !default;
