--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -3,7 +3,6 @@
 
 // thumb width without a white border, let's make it the height of the slider
 $thumbWidth: c.$slideTrackHeight;
-$thumbFullWidth: $thumbWidth + c.$sliderThumbBorderSize * 2;
 
 $fillBorderSize: 1px;
 
@@ -55,6 +54,24 @@ $fillBorderSize: 1px;
   -ms-grid-row: $row;
 }
 
+/**
+  We can't combine these selectors with a comma, because they're invalid in different browsers.
+  This helper will save us some code blocks.
+ */
+@mixin styleThumb {
+  &::-webkit-slider-thumb {
+    @content;
+  }
+
+  &::-moz-range-thumb {
+    @content;
+  }
+
+  &::-ms-thumb {
+    @content;
+  }
+}
+
 .wrapper {
   display: flex;
   align-items: center;
@@ -98,15 +115,7 @@ $fillBorderSize: 1px;
         visibility: hidden; // IE11 specific rule to hide the default tick marks
       }
 
-      &::-webkit-slider-thumb {
-        @include thumb;
-      }
-
-      &::-moz-range-thumb {
-        @include thumb;
-      }
-
-      &::-ms-thumb {
+      @include styleThumb {
         @include thumb;
       }
 
@@ -115,30 +124,14 @@ $fillBorderSize: 1px;
        */
       &:hover,
       &.hover {
-        &::-webkit-slider-thumb {
-          box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorPrimary;
-        }
-
-        &::-moz-range-thumb {
-          box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorPrimary;
-        }
-
-        &::-ms-thumb {
+        @include styleThumb {
           box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorPrimary;
         }
       }
 
       &.focus,
       &:focus {
-        &::-webkit-slider-thumb {
-          box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
-        }
-
-        &::-moz-range-thumb {
-          box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
-        }
-
-        &::-ms-thumb {
+        @include styleThumb {
           box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
         }
       }
@@ -209,7 +202,7 @@ $fillBorderSize: 1px;
 
         $markWidth: 2px;
 
-        width: calc(100% - #{$markWidth});
+        width: calc(100% - #{$markWidth}); // so that 0% & 100% marks are visible
         margin: 0;
         padding: 0;
         list-style-type: none;
@@ -218,7 +211,7 @@ $fillBorderSize: 1px;
 
         > li {
           position: absolute;
-          width: $markWidth; // margin from sides so that 0% & 100% marks are visible
+          width: $markWidth;
           height: calc(#{c.$slideTrackHeight} - #{$fillBorderSize} * 2);
           background: c.$colorTextSecondary;
 
@@ -247,17 +240,7 @@ $fillBorderSize: 1px;
     }
 
     input[type='range']:disabled {
-      &::-webkit-slider-thumb {
-        box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorNeutral;
-        background: c.$colorNeutralLight;
-      }
-
-      &::-moz-range-thumb {
-        box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorNeutral;
-        background: c.$colorNeutralLight;
-      }
-
-      &::-ms-thumb {
+      @include styleThumb {
         box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorNeutral;
         background: c.$colorNeutralLight;
       }
