feat(ui/card): apply code review suggestions

--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   box-shadow: 0 c.$cardShadowSize c.$cardShadowBlur 0 c.$colorShadow;
   border-radius: c.$borderRadius;
+  background: c.$colorNeutralWhite;
 
   &.typeSecondary {
     background: none;
