--- a/packages/ui/src/PasswordField.module.scss
+++ b/packages/ui/src/PasswordField.module.scss
@@ -1,13 +1,14 @@
 @use '../styles/constants' as c;
 
 $buttonMargin: c.$grid * 2;
-$inputPadding: c.$iconSizeSmall + $buttonMargin * 2;
+$inputMargin: c.$iconSizeSmall + $buttonMargin * 2;
 
 .inputContainer {
   position: relative;
 
   > input {
-    padding-right: $inputPadding;
+    padding-right: 0;
+    margin-right: $inputMargin;
   }
 
   .toggle {
