--- a/packages/ui/src/Link.module.scss
+++ b/packages/ui/src/Link.module.scss
@@ -1,7 +1,7 @@
 @use '../styles/constants' as c;
 
 @mixin link {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   color: c.$colorPrimary;
