enhance Pagination styles

--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -1,4 +1,5 @@
 @use '../styles/constants' as c;
+@use '../styles/helpers' as h;
 
 .container {
   display: flex;
@@ -32,51 +33,30 @@
       margin-right: c.$grid * 2;
     }
 
-    // We have to increase specificity to overwrite Button styles
+    // Overwriting button styles
     .button {
-      font-size: c.$fontSizeBodySmall;
-      letter-spacing: c.$letterSpacingBodySmall;
-
       color: c.$colorText;
       background-color: c.$colorNeutralLighter;
-      border: c.$borderWidthButton solid;
+      border: 1px solid;
       border-color: c.$colorNeutralLight;
-
-      .outline {
-        /* Note: We need to take border of 2*2px into account */
-        /* doiuse-disable calc */
-        width: calc(100% + #{c.$grid} * 2);
-        height: calc(100% + #{c.$grid} * 2);
-        /* doiuse-enable calc */
-      }
+      @include c.typographyBodySmall;
 
       .body {
         padding: 0 c.$grid * 3.5;
       }
 
       &:hover,
-      &.hover,
-      &:focus,
-      &.focus {
-        color: c.$colorPrimaryLight;
-        border-color: c.$colorNeutral;
-      }
-
       &:active,
-      &.active {
-        color: c.$colorPrimaryDark;
-        border-color: c.$colorPrimaryDark;
-      }
-
-      &:disabled {
-        color: c.$colorTextSecondary;
-        background-color: c.$colorNeutral;
-        border-color: c.$colorNeutral;
-      }
-
       &.selected {
-        color: c.$colorPrimary;
         border-color: c.$colorPrimary;
+      }
+
+      &:focus {
+        .outline {
+          visibility: hidden;
+        }
+
+        border-color: c.$colorAccessibilityOutline;
       }
     }
   }
