--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -46,10 +46,12 @@
   }
 
   .iconLeft {
+    flex-shrink: 0;
     margin-right: c.$grid * 2;
   }
 
   .iconRight {
+    flex-shrink: 0;
     margin-left: c.$grid * 2;
   }
 
@@ -57,6 +59,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     max-width: 100%;
     width: 100%;
     height: 100%;
