--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -1,17 +1,57 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
-.container {
-  display: flex;
-  flex-direction: column;
+$selectHorizontalPadding: c.$grid * 3;
+$menuMargin: c.$grid * 3;
 
+$select: ':global .hz-select-field__control';
+
+.container {
   .errorContainer {
     margin-top: c.$grid;
   }
 
-  select {
-    /* cursor: pointer;
+  .selectBlock {
     margin-top: c.$grid;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .helperText {
+    margin-left: c.$grid;
+    display: block;
+  }
+
+  .chevron {
+    transition: 0;
+    color: c.$colorPrimary;
+    margin-left: $selectHorizontalPadding;
+  }
+  :global .hz-select-field__control--menu-is-open :local .chevron {
+    transform: rotate(180deg);
+  }
+
+  .clear {
+    margin-left: $selectHorizontalPadding;
+  }
+
+  :global .hz-select-field {
+    flex: 1 1 auto;
+
+    @include c.typographyBodySmall;
+  }
+
+  :global .hz-select-field__value-container {
+    padding: 0;
+  }
+
+  :global .hz-select-field__indicator-separator {
+    display: none;
+  }
+
+  #{$select} {
+    cursor: pointer;
     color: c.$colorText;
     height: c.$inputHeight;
     padding-left: c.$grid * 3;
@@ -20,44 +60,79 @@
     box-sizing: border-box;
     border: c.$borderWidth solid c.$colorNeutralLight;
     border-radius: c.$borderRadius;
-    background-color: c.$colorNeutralLighter; */
+    background-color: c.$colorNeutralLighter;
     // Note: Is IE11 problematic in case of checkbox/radio, but not select
     /* doiuse-disable css-appearance */
     //appearance: none;
     /* doiuse-enable css-appearance */
     //width: 100%;
-
-    /* @include c.typographyBodySmall; */
-  }
-
-  &:hover,
-  &.hover {
-    select {
-      border-color: c.$colorPrimary;
-    }
+    transition: none;
   }
 
   &.disabled {
-    select {
-      cursor: not-allowed;
+    #{$select} {
       color: c.$colorTextSecondary;
       background-color: c.$colorNeutral;
       border-color: c.$colorNeutralLight;
     }
+
+    .chevron {
+      transition: 0;
+      color: c.$colorTextSecondary;
+    }
   }
 
   &.hasError {
-    select {
+    #{$select} {
       border-color: c.$colorError;
     }
   }
 
-  select:focus {
+  // We target specifically #{$select} not to apply hover styles to the select when a helper icon is hovered
+  #{$select}:hover,
+  &.hover #{$select} {
+    border-color: c.$colorPrimary;
+    transition: none;
+  }
+
+  &.focus #{$select},
+  #{$select}.hz-select-field__control--is-focused {
     @include h.outlineFormField;
   }
-  &.focus {
-    select {
-      @include h.outlineFormField;
+}
+
+.menuContainer {
+  :global .hz-select-field__menu {
+    margin-top: $menuMargin;
+    margin-bottom: $menuMargin;
+    border: c.$borderWidth solid c.$colorNeutralLight;
+    border-radius: c.$borderRadius;
+    background-color: c.$colorNeutralLighter;
+    overflow: hidden;
+    box-shadow: 0 c.$selectMenuShadowSize c.$selectMenuShadowBlur 0 c.$colorShadow;
+
+    @include c.typographyBodySmall;
+
+    :global .hz-select-field__menu-list {
+      padding: 0;
+      color: c.$colorTextSecondary;
+    }
+
+    :global .hz-select-field__option {
+      height: c.$inputHeight;
+      line-height: c.$inputHeight;
+      padding: 0 $selectHorizontalPadding;
+      background-color: transparent;
+
+      &:global.hz-select-field__option--is-focused {
+        @include h.outlineSimple;
+
+        color: c.$colorText;
+      }
+
+      &:global.hz-select-field__option--is-selected {
+        color: c.$colorPrimary;
+      }
     }
   }
 }
