--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -1,5 +1,16 @@
+@use '../styles/constants' as c;
+
 .wrapperCentered {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.wrapperModal {
+  width: 100%;
+  height: 100px;
+}
+
+.modal {
+  width: calc(#{c.$modalWidth} - 120px);
 }
