--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -30,23 +30,6 @@ $thumbWidth: c.$slideTrackHeight;
   height: $thumbWidth;
 }
 
-@mixin gridParent($cols: 1fr, $rows: 1fr) {
-  display: grid;
-  grid-template-columns: $cols;
-  grid-template-rows: $rows;
-  -ms-grid-columns: $cols;
-  -ms-grid-rows: $rows;
-  display: -ms-grid; /* stylelint-disable-line declaration-block-no-duplicate-properties */
-}
-
-// used to position elements on top of each other using grid
-@mixin gridItem($col: 1, $row: 1) {
-  grid-column: $col;
-  grid-row: $row;
-  -ms-grid-column: $col;
-  -ms-grid-row: $row;
-}
-
 /**
   We can't combine these selectors with a comma, because they're invalid in different browsers.
   This helper will save us some code blocks.
@@ -65,153 +48,175 @@ $thumbWidth: c.$slideTrackHeight;
   }
 }
 
-.label {
-  @include c.typographyBodyNormal;
-
-  color: c.$colorTextSecondary;
-  padding: 0;
+ul.markDescriptions {
+  list-style-type: none;
   margin: 0;
+  padding: 0;
+  height: c.$grid * 6;
+  position: relative;
+
+  > li {
+    position: absolute;
+    bottom: c.$grid;
+    transform: translateX(-50%);
+  }
 }
 
 .wrapper {
-  @include c.typographyBodySmall;
-  @include gridParent(2fr, 2fr);
+  display: flex;
 
-  flex: 1;
-
-  input[type='range'] {
-    &::-webkit-slider-runnable-track,
-    &::-webkit-slider-thumb,
-    & {
-      -webkit-appearance: none;
-    }
-
-    z-index: c.$zIndex100;
-    outline: none;
-    background: none;
-    @include gridItem(1, 2);
-
-    pointer-events: none; // ignore clicks on the actual inputs and let them pass to the handles
-    min-height: c.$slideTrackHeight;
-    padding: 0;
-    margin: 0;
-    justify-self: center;
-    width: calc(100% + #{c.$sliderThumbBorderSize * 2});
-
-    // Style the track
-    &::-webkit-slider-runnable-track {
-      @include track;
-    }
-
-    &::-moz-range-track {
-      @include track;
-    }
-
-    &::-ms-track {
-      @include track;
-
-      visibility: hidden; // IE11 specific rule to hide the default tick marks
-    }
-
-    @include styleThumb {
-      @include thumb;
-    }
-
-    /**
-      Hover
-     */
-    &:hover,
-    &.hover {
-      @include styleThumb {
-        box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorPrimary;
-      }
-    }
-
-    &.focus,
-    &:focus {
-      @include styleThumb {
-        box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
-      }
-    }
-
-    // don't show IE11's lower fill
-    &::-ms-fill-lower {
-      display: none;
-    }
+  .innerWrapper {
+    flex: 1;
   }
 
-  // see the javascript code for an explanation of this class
-  input[type='range'].atTheBorder {
-    @include styleThumb {
-      pointer-events: none;
-    }
-  }
+  .inputWrapper {
+    @include c.typographyBodySmall;
 
-  ul.markDescriptions {
-    @include gridItem(1, 1);
-
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: c.$grid * 6;
     position: relative;
-
-    > li {
-      position: absolute;
-      bottom: c.$grid;
-      transform: translateX(-50%);
-    }
-  }
-
-  .fillPlaceholder {
-    @include gridItem(1, 2);
-    @include gridParent;
-
-    pointer-events: none;
     height: c.$slideTrackHeight;
-    // highlighted part covers the border
-    box-sizing: border-box;
-    background: c.$colorNeutral;
-    border: c.$sliderFillBorderSize solid c.$colorNeutralLight;
-    width: 100%;
+    padding-top: calc(#{c.$sliderThumbBorderSize} + #{c.$sliderThumbShadowSize});
+    padding-bottom: calc(#{c.$sliderThumbBorderSize} + #{c.$sliderThumbShadowSize});
+    flex: 1;
 
-    // if the actual fill is very small the border is rounded, it can reach out of the wrapper
-    overflow: hidden;
+    input[type='range'] {
+      &::-webkit-slider-runnable-track,
+      &::-webkit-slider-thumb,
+      & {
+        -webkit-appearance: none;
+      }
 
-    // we ned to reserve space like this manually mostly because of IE11
-    margin-top: calc(#{c.$sliderThumbBorderSize} + #{c.$sliderThumbShadowSize});
-    margin-bottom: calc(#{c.$sliderThumbBorderSize} + #{c.$sliderThumbShadowSize});
-    border-radius: c.$sliderTrackBorderRadius;
-
-    .fill {
-      @include gridItem;
-
-      pointer-events: none;
+      z-index: c.$zIndex100;
+      outline: none;
+      background: none;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: c.$sliderThumbBorderSize * -1;
+      width: calc(100% + #{c.$sliderThumbBorderSize * 2});
       height: 100%;
-      background: c.$colorPrimaryLight;
-      // width & marginLeft will be set by a Javascript
+      pointer-events: none; // ignore clicks on the actual inputs and let them pass to the handles
+      min-height: c.$slideTrackHeight;
+      padding: 0;
+      margin: 0;
+      justify-self: center;
+
+      // Style the track
+      &::-webkit-slider-runnable-track {
+        @include track;
+      }
+
+      &::-moz-range-track {
+        @include track;
+      }
+
+      &::-ms-track {
+        @include track;
+
+        visibility: hidden; // IE11 specific rule to hide the default tick marks
+      }
+
+      @include styleThumb {
+        @include thumb;
+      }
+
+      /**
+        Hover
+       */
+      &:hover,
+      &.hover {
+        @include styleThumb {
+          box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorPrimary;
+        }
+      }
+
+      &.focus,
+      &:focus {
+        @include styleThumb {
+          box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
+        }
+      }
+
+      // don't show IE11's lower fill
+      &::-ms-fill-lower {
+        display: none;
+      }
     }
 
-    ul.marks {
-      @include gridItem;
+    // see the javascript code for an explanation of this class
+    input[type='range'].atTheBorder {
+      @include styleThumb {
+        pointer-events: none;
+      }
+    }
 
-      $markWidth: 2px;
-
-      width: calc(100% - #{$markWidth}); // so that 0% & 100% marks are visible
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-      height: 100%;
-      position: relative;
+    .fillPlaceholder {
       pointer-events: none;
+      height: c.$slideTrackHeight;
+      // highlighted part covers the border
+      box-sizing: border-box;
+      background: c.$colorNeutral;
+      border: c.$sliderFillBorderSize solid c.$colorNeutralLight;
+      width: 100%;
 
-      > li {
-        position: absolute;
-        width: $markWidth;
-        background-color: c.$colorTextSecondary;
+      // if the actual fill is very small the border is rounded, it can reach out of the wrapper
+      overflow: hidden;
 
-        &.active {
-          background-color: c.$colorNeutralWhite;
+      // we ned to reserve space like this manually mostly because of IE11
+      border-radius: c.$sliderTrackBorderRadius;
+
+      .fill {
+        pointer-events: none;
+        height: 100%;
+        background: c.$colorPrimaryLight;
+        // width & marginLeft will be set by a Javascript
+      }
+
+      ul.marks {
+        $markWidth: 2px;
+
+        width: calc(100% - #{$markWidth}); // so that 0% & 100% marks are visible
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        height: 100%;
+        position: relative;
+        pointer-events: none;
+
+        > li {
+          position: absolute;
+          width: $markWidth;
+          background-color: c.$colorTextSecondary;
+
+          &.active {
+            background-color: c.$colorNeutralWhite;
+          }
+        }
+      }
+    }
+
+    &.disabled {
+      ul.markDescriptions {
+        color: c.$colorNeutralLight;
+      }
+
+      .fillPlaceholder {
+        background-color: c.$colorNeutral;
+
+        .fill {
+          background-color: c.$colorNeutralLight;
+        }
+
+        ul.marks {
+          > li {
+            background-color: c.$colorNeutralLight;
+          }
+        }
+      }
+
+      input[type='range']:disabled {
+        @include styleThumb {
+          box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorNeutral;
+          background: c.$colorNeutralLight;
         }
       }
     }
@@ -219,36 +224,8 @@ $thumbWidth: c.$slideTrackHeight;
 
   .helperText {
     margin-left: c.$sliderThumbBorderSize;
-    @include gridItem(2, 2);
-
-    align-items: center;
-  }
-
-  &.disabled {
-    ul.markDescriptions {
-      color: c.$colorNeutralLight;
-    }
-
-    .fillPlaceholder {
-      background-color: c.$colorNeutral;
-
-      .fill {
-        background-color: c.$colorNeutralLight;
-      }
-
-      ul.marks {
-        > li {
-          background-color: c.$colorNeutralLight;
-        }
-      }
-    }
-
-    input[type='range']:disabled {
-      @include styleThumb {
-        box-shadow: 0 0 0 c.$sliderThumbHoverBorderSize c.$colorNeutral;
-        background: c.$colorNeutralLight;
-      }
-    }
+    align-self: flex-end;
+    height: calc(#{c.$sliderThumbBorderSize} * 2 + #{c.$slideTrackHeight});
   }
 }
 
