--- a/packages/ui/src/Table/Cell.module.scss
+++ b/packages/ui/src/Table/Cell.module.scss
@@ -1,31 +1,26 @@
 @use '../../styles/constants' as c;
 
-td.cell {
-  display: table-cell;
+.td {
+  position: relative;
+  display: flex;
+  align-items: center;
   padding-top: c.$grid * 2.5;
   padding-bottom: c.$grid * 2.5;
   padding-right: c.$grid * 3;
   padding-left: c.$grid * 3;
-  border-bottom: c.$borderWidth solid c.$colorNeutralWhite;
-  border-right: c.$borderWidth solid c.$colorNeutralWhite;
+  color: c.$colorText;
+  @include c.typographyBodySmall;
 
-  .content {
-    display: flex;
-    align-items: center;
-    color: c.$colorText;
-    @include c.typographyBodySmall;
+  &.alignLeft {
+    justify-content: flex-start;
+  }
 
-    &.alignLeft {
-      justify-content: flex-start;
-    }
+  &.alignRight {
+    justify-content: flex-end;
+  }
 
-    &.alignRight {
-      justify-content: flex-end;
-    }
-
-    &.alignCenter {
-      justify-content: center;
-    }
+  &.alignCenter {
+    justify-content: center;
   }
 }
 
