--- a/packages/ui/src/Table/Table.module.scss
+++ b/packages/ui/src/Table/Table.module.scss
@@ -1,5 +1,8 @@
-.table {
-  border-collapse: collapse;
-  border-style: hidden;
-  width: 100%;
+.container {
+  display: block;
+  overflow-x: auto;
+
+  .table {
+    width: 100%;
+  }
 }
