--- a/packages/ui/src/Modal.module.scss
+++ b/packages/ui/src/Modal.module.scss
@@ -20,4 +20,28 @@
   width: c.$modalWidth;
   max-height: c.$modalHeight;
   z-index: c.$zIndex1000;
+  // TODO: Get color
+  box-shadow: 5px 20px 80px 0 #353d49;
+
+  .header {
+    height: c.$grid * 14;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 c.$grid * 6;
+    // TODO: Get color
+    border-bottom: c.$borderWidth solid c.$colorNeutralLight;
+  }
+
+  .footer {
+    height: c.$grid * 16;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 c.$grid * 6;
+    // TODO: Get color
+    border-top: c.$borderWidth solid c.$colorNeutralLight;
+  }
 }
